--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "styled-components": "^6.1.8",
+    "three": "^0.161.0",
     "typescript": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
